--- a/index.html
+++ b/index.html
@@ -399,16 +399,16 @@
 
         /* YOUR FOOD PICTURES */
         const foodItems = [
-            { id: 1, name: 'Chicken Kacchi Biryani', price: 210, description: 'Fragrant dum-cooked biryani with tender chicken', image: 'images/Hyderabadi Kacchi.jpg' },
-            { id: 2, name: 'Chicken BBQ', price: 140, description: 'Smoky, tender grilled chicken', image: 'images/bbq.jpg' },
-            { id: 3, name: 'Chicken Curry', price: 650, description: 'Rich creamy curry in thick gravy', image: 'images/beef.jpg' },
-            { id: 4, name: 'Lamb Nihari', price: 550, description: 'Slow-cooked lamb in rich gravy', image: 'images/nehari.jpg' },
-            { id: 5, name: 'French Fries', price: 150, description: 'Crispy golden fries with sauce', image: 'images/fries.jfif' },
-            { id: 6, name: 'Nachos', price: 150, description: 'Cheesy loaded nachos with toppings', image: 'images/nachos.jpg' },
-            { id: 7, name: 'Pizza', price: 650, description: 'Cheesy pepperoni pizza', image: 'images/pizza.jfif' },
-            { id: 8, name: 'Fried Chicken', price: 250, description: 'Crispy fried chicken pieces', image: 'images/fried-chicken.png' },
-            { id: 9, name: 'Grilled Chicken', price: 135, description: 'Juicy grilled chicken with flames', image: 'images/grilled-chicken.jpg' },
-            { id: 10, name: 'Burger', price: 350, description: 'Juicy cheese burger with veggies', image: 'images/burger.jfif' }
+            { id: 1, name: 'Chicken Kacchi Biryani', price: 210, description: 'Fragrant, slow-cooked, traditional dum biryani with tender, marinated chicken', image: 'images/Hyderabadi Kacchi.jpg' },
+            { id: 2, name: 'Chicken BBQ', price: 140, description: 'Flame-kissed, smoky, tender grilled chicken bursting with savory seasonings', image: 'images/bbq.jpg' },
+            { id: 3, name: 'Chicken Curry', price: 650, description: 'Rich, creamy, aromatic curry simmered in thick, velvety gravy', image: 'images/beef.jpg' },
+            { id: 4, name: 'Lamb Nihari', price: 550, description: 'Tender, slow-cooked lamb braised in rich, savory, herb-infused gravy', image: 'images/nehari.jpg' },
+            { id: 5, name: 'French Fries', price: 150, description: 'Crispy, golden, perfectly seasoned fries with tangy dipping sauce', image: 'images/fries.jfif' },
+            { id: 6, name: 'Nachos', price: 150, description: 'Cheesy, loaded nachos smothered in sour cream, jalapeños, and savory toppings', image: 'images/nachos.jpg' },
+            { id: 7, name: 'Pizza', price: 650, description: 'Cheesy, loaded pepperoni pizza with melted mozzarella and zesty sauce', image: 'images/pizza.jfif' },
+            { id: 8, name: 'Fried Chicken', price: 250, description: 'Crispy, crunchy, juicy fried chicken pieces with a flavorful coating', image: 'images/fried-chicken.png' },
+            { id: 9, name: 'Grilled Chicken', price: 135, description: 'Juicy, tender, fire-kissed grilled chicken with dancing flames', image: 'images/grilled-chicken.jpg' },
+            { id: 10, name: 'Burger', price: 350, description: 'Juicy, flame-grilled cheeseburger loaded with crisp lettuce and ripe tomatoes', image: 'images/burger.jfif' }
         ];
 
         /* DEFAULT ACCOUNTS (will be stored in localStorage) */
@@ -1622,3 +1622,4 @@
     </script>
 </body>
 </html>
+
